GearsetPOC/force-app/main/default/objects/Incidents__c/Incidents__c.object-meta.xml
<CustomObject>
    <label>Incident SF</label>
    <nameField>
        <displayFormat>IN{000000}</displayFormat>
        <label>Incidents Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents SF</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>