GearsetPOC/force-app/main/default/objects/Incidents__c/fields/Additional_CB__c.field-meta.xml
<CustomField>
    <fullName>Additional_CB__c</fullName>
    <label>Additional CB%</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>