GearsetPOC/force-app/main/default/objects/Incidents__c/fields/Additional_CBE__c.field-meta.xml
<CustomField>
    <fullName>Additional_CBE__c</fullName>
    <label>Additional CBE%</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>