GearsetPOC/force-app/main/default/objects/Incidents__c/fields/Additional_CC__c.field-meta.xml
<CustomField>
    <fullName>Additional_CC__c</fullName>
    <label>Additional CC%</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>