GearsetPOC/force-app/main/default/objects/Incidents__c/fields/Additional_Comp__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comp__c</fullName>
    <label>Additional Comp %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>