GearsetPOC/force-app/main/default/objects/Incidents__c/fields/Compensation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Reason__c</fullName>
    <label>Compensation Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>