GearsetPOC/force-app/main/default/objects/Incidents__c/fields/Compensation_Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Rule_Id__c</fullName>
    <description>This is the Id for the compensation rule applicable for this incident. You should not modify this manually</description>
    <label>Compensation Rule Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>