GearsetPOC/force-app/main/default/objects/Incidents__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Detrainment/Transbordement</fullName>
            </value>
            <value>
                <fullName>No Meal BP</fullName>
            </value>
            <value>
                <fullName>No Meal SP</fullName>
            </value>
            <value>
                <fullName>Not full Service BP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>