GearsetPOC/force-app/main/default/objects/Incidents__c/fields/Train__c.field-meta.xml
<CustomField>
    <fullName>Train__c</fullName>
    <label>Train</label>
    <referenceTo>Train__c</referenceTo>
    <relationshipName>Incidents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>